--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: MODISTools
 Type: Package
 Title: MODIS Subsetting Tools
-Version: 0.91
+Version: 0.91.1
 Date: 2012-11-08
 Author: Sean Tuck
-Depends: R (>= 1.5.0), SSOAP (>= 0.91-0), XMLSchema
+Depends: SSOAP (>= 0.91-0), XMLSchema
 Suggests: RCurl, XML
-Maintainer: Sean Tuck <sean.tuck11@imperial.ac.uk>
+Maintainer: Sean Tuck <sean.tuck@stx.ox.ac.uk>
 Description: 	Provides several functions for extracting and dealing 
-		with subsets of MODIS data as a batch process.
+		with subsets of MODIS Land Processes data as a batch process.
 License: GPL-2
 LazyLoad: yes
 LazyData: yes
