--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: MODISTools
 Type: Package
 Title: MODIS Subsetting Tools
-Version: 0.92.0
-Date: 2012-11-08
+Version: 0.93.0
+Date: 2013-04-14
 Author: Sean Tuck, Helen Phillips
-Depends: SSOAP (>= 0.9-0), XMLSchema
-Suggests: RCurl, XML
+Depends: RCurl, XML
 Maintainer: Sean Tuck <sean.tuck@plants.ox.ac.uk>
 Description: 	Provides several functions for extracting and dealing 
 		with subsets of MODIS Land Processes data as a batch process.
