--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 README.html
 *~
 man/.Rapp.history
+inst/doc/UsingMODISTools-concordance.tex
+inst/doc/UsingMODISTools.log
+inst/doc/UsingMODISTools.pdf
+inst/doc/UsingMODISTools.synctex.gz
+inst/doc/UsingMODISTools.tex
+inst/doc/UsingMODISTools.toc
