--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: MODISTools
 Type: Package
 Title: MODIS Subsetting Tools
-Version: 0.94.6
-Date: 2015-01-21
+Version: 0.94.7
+Date: 2016-03-05
 Author: Sean Tuck, Helen Phillips
-Imports: RCurl, XML
+Imports: RCurl, XML, grDevices, graphics, stats, utils
 Maintainer: Sean Tuck <sean.tuck@plants.ox.ac.uk>
 Description: 	Provides several functions for downloading, storing and processing 
 		subsets of MODIS Land Processes data as a batch process.
