Update RCurl namespace to deal with issue 17

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
-importFrom(RCurl, basicTextGatherer, curlPerform)
+import(RCurl)
 importFrom(XML, xmlRoot, xmlTreeParse, xmlSApply, xmlValue)
 
 importFrom("grDevices", "dev.off", "pdf")
