--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.95.0
 Date: 2016-08-01
 Author: Sean Tuck, Helen Phillips
 Imports: RCurl, XML, grDevices, graphics, stats, utils
-Maintainer: Sean Tuck <sean.tuck@plants.ox.ac.uk>
+Maintainer: Sean Tuck <seanltuck@gmail.com>
 Description: 	Provides several functions for downloading, storing and processing 
 		subsets of MODIS Land Processes data as a batch process.
 License: GPL-3
